@@ -640,6 +640,8 @@ Release 2.8.0 - UNRELEASED
     HADOOP-12056. Use DirectoryStream in DiskChecker#checkDirs to detect
     errors when listing a directory. (Zhihai Xu via wang)
 
+    HADOOP-12055. Deprecate usage of NativeIO#link. (Andrew Wang via cnauroth)
+
   OPTIMIZATIONS
 
     HADOOP-11785. Reduce the number of listStatus operation in distcp
